use records and pattern matching